fix: fix blue box outline on button taps on mobile devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+	outline: none;
+	-webkit-tap-highlight-color: transparent;
+}
+
 body {
 	font-family: "Poppins", sans-serif;
 }
